@startuml

rectangle Domain{

    class Config {
        - nombreAlumno
        - añoIngreso
    }

    class Inscripcion{
        - fecha
        - nota
        - comision: String
        --
        + esOrdenMateria()
        + esNombreComision()
        + getOrdenMateria()
        + esRegular()
        + esAprobada()
    }

    class Carrera {
        - nombre
        - descripcion
        - titulo
        - tituloMedio
        - horas
        --
        + getCantidadMaterias()
    }

    class Materia {
        - orden: int
        - nombre: String
        - descripcion: String
        - modalidad: String
        - sigla: String
        - electiva: boolean
        - correlativas_reg: int[]
        - correlativas_ap: int[]
        --
        + esOrdenMateria()
        + esCursable(corReg, corApDi)
    }

    class Comision{
        - numero
        - variante
        - horarios: int[][]
        --
        + armarNombre()
        + esNumeroComision()
        + esEspecialidadComision()
        + esNivelComision()
        + getHorarioMateria()
    }

    enum Condicion{
        * Regular
        * Aprobado
        * Inscripto
        * Disponible
        * NoDisponible
    }

    enum Especialidad{
        *	C	Civil
        *	Q	Electrica
        *	R	Electronica
        *	D	Industrial
        *	S	Mecanica
        *	T	Metalurgica
        *	V	Quimica
        *	K	Sistemas
        *	B	Basica
    }

    enum Turno {
        * Mañaña
        * Tarde
        * Noche
    }

    enum Modalidad {
        * Anual
        * 1C
        * 2C
        * Intensivo
    }

    enum Nivel{
        * 1 - 5
    }

    Carrera *-> Materia
    'Carrera --> Especialidad

    Materia -> Inscripcion
    Materia --> Especialidad
    Materia --> Nivel

    Inscripcion --> Condicion
    Inscripcion --> Comision
    Inscripcion --> Modalidad

    Comision --> Turno
    Comision --> Especialidad
    Comision --> Nivel
}


@enduml

